refactor(settings): 优化设置面板代码结构和逻辑
- 使用 record 简化 DetectResponse 类定义
- 提取模型ID解析逻辑到独立方法 getStrings
- 移除冗余的空值检查和条件判断
- 更新JavaDoc注释格式为标准HTML标签
- 清理无用的导入和空行
- 优化列表获取首选元素的调用方式
- 添加NotNull注解增强类型安全